# docplex-extensions

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yaml  release.yaml  tests.yaml
docs/source/: conf.py  index.rst
docs/source/api_reference/: index.rst  index_sets.rst  model_specific.rst  parameters.rst  variables.rst
docs/source/installation/: index.rst
examples/: README.rst  model_diet.py  model_multicommodity.py
examples/evaluating_variability/: README.rst  example_eval_glass4.py
examples/model_building/: README.rst  example_build_diet.py  example_build_multicommodity.py
examples/model_tuning/: README.rst  example_tune_mik250.py  example_tune_p0033.py
examples/parameter_tuning/: README.rst  example_tune_mik250.py  example_tune_p0033.py
src/docplex_extensions/: __init__.py  _dict_mixins.py  _index_sets.py  _model_funcs.py  _pandas_accessors.py  _param_dicts.py  _tuning_funcs.py  _var_dicts.py  _var_funcs.py
tests/: __init__.py
tests/functional_tests/: diet_test.py  multicommodity_test.py
tests/typing_tests/: indexset1d.py  indexsetNd.py  paramdict1d.py  paramdictNd.py  vardict1d.py  vardictNd.py
tests/unit_tests/: helper_indexset.py
tests/unit_tests/index_sets/: add_test.py  conftest.py  constructor_and_attr_test.py  dunder_item_test.py  flatten_iterable_test.py  indexsetnd_cache_impl_test.py  indexsetnd_subset_selection_test.py  iteration_test.py  ordering_test.py  rich_comparison_test.py  seq_methods_test.py
tests/unit_tests/model_funcs/: conftest.py  model_funcs_test.py  tuning_funcs_test.py
tests/unit_tests/pandas_accessors/: to_indexset_test.py  to_paramdict_test.py
tests/unit_tests/param_dicts/: conftest.py  constructor_and_attr_test.py  dict_methods_test.py  dunder_item_test.py  paramdict1d_custom_methods_test.py  paramdictND_subset_selection_test.py  paramdictNd_custom_methods_test.py
tests/unit_tests/var_dicts_funcs/: conftest.py  constructor_and_attr_test.py  custom_methods_test.py  dict_methods_test.py  dunder_item_test.py  var_funcs_test.py  vardictND_subset_selection_test.py
